@@ -2,15 +2,13 @@ package rut.miit.hotel.service.impl;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import rut.miit.hotel.domain.*;
 import rut.miit.hotel.domain.status.BookingStatus;
 import rut.miit.hotel.domain.status.PaymentStatus;
 import rut.miit.hotel.dto.BookingDto;
 import rut.miit.hotel.dto.BookingOptionDto;
 import rut.miit.hotel.dto.PaymentDto;
-import rut.miit.hotel.exception.EntityNotFoundException;
-import rut.miit.hotel.exception.ValidationFailedException;
+import rut.miit.hotel.exception.*;
 import rut.miit.hotel.repository.*;
 import rut.miit.hotel.service.BookingDomainService;
 
@@ -18,6 +16,7 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 
@@ -45,18 +44,17 @@ public class BookingDomainServiceImpl implements BookingDomainService {
     }
 
     @Override
-    @Transactional
     public BookingDto createBooking(BookingDto bookingDto) {
-        Customer customer = customerRepository.findById(bookingDto.getCustomerId()).orElseThrow(() -> new EntityNotFoundException("Customer not found"));
-        Room room = roomRepository.findById(bookingDto.getRoomId()).orElseThrow(() -> new EntityNotFoundException("Room not found"));
+        Customer customer = customerRepository.findById(bookingDto.getCustomerId()).orElseThrow(() -> new CustomerNotFoundException());
+        Room room = roomRepository.findById(bookingDto.getRoomId()).orElseThrow(() -> new RoomNotFoundException());
         LocalDate startDate = bookingDto.getStartDate();
         LocalDate endDate = bookingDto.getEndDate();
 
         if (!isRoomAvailable(room, startDate, endDate)) {
-            throw new ValidationFailedException("Room is already booked for the specified dates or is not valid");
+            throw new ValidationException("Room is already booked for the specified dates or is not valid");
         }
         if (hasBookingInRange(customer, startDate, endDate)) {
-            throw new ValidationFailedException("Customer already has a booking (paid or unpaid) for the selected period");
+            throw new ValidationException("Customer already has a booking (paid or unpaid) for the selected period");
         }
         Booking booking = new Booking(startDate, endDate, room, customer);
 
@@ -65,9 +63,9 @@ public class BookingDomainServiceImpl implements BookingDomainService {
 
             for (BookingOptionDto dto : bookingDto.getBookingOptions()) {
                 HotelOption hotelOption = hotelOptionRepository.findById(dto.getHotelOptionId())
-                        .orElseThrow(() -> new EntityNotFoundException("Hotel option not found"));
+                        .orElseThrow(() -> new HotelOptionNotFoundException());
 
-                if (!hotelOption.getHotel().getId().equals(room.getHotel().getId())) throw new ValidationFailedException("HotelOption incorrect");
+                if (!hotelOption.getHotel().getId().equals(room.getHotel().getId())) throw new ValidationException("HotelOption incorrect");
                 bookingOptions.add(new BookingOption(booking, hotelOption, dto.getCount()));
             }
             booking.setBookingOptions(bookingOptions);
@@ -76,18 +74,18 @@ public class BookingDomainServiceImpl implements BookingDomainService {
         double totalPrice = calculateTotalAmount(room, startDate, endDate, bookingOptions);
         Payment payment = new Payment(totalPrice, booking);
 
-        booking.setPayments(List.of(payment));
+        booking.setPayments(Arrays.asList(payment));
         bookingRepository.save(booking);
 
         return modelMapper.map(booking, BookingDto.class);
     }
 
-    protected boolean hasBookingInRange(Customer customer, LocalDate startDate, LocalDate endDate) {
+    boolean hasBookingInRange(Customer customer, LocalDate startDate, LocalDate endDate) {
         List<Booking> overlappingBookings = bookingRepository.findByCustomerDateRangeStatuses(customer, startDate, endDate, List.of(BookingStatus.CREATED, BookingStatus.COMPLETED));
         return !overlappingBookings.isEmpty();
     }
 
-    protected boolean isRoomAvailable(Room room, LocalDate startDate, LocalDate endDate) {
+    boolean isRoomAvailable(Room room, LocalDate startDate, LocalDate endDate) {
         if (!room.isFunctional()) return false;
 
         List<Booking> bookings = bookingRepository.findByRoomAndDateRange(room, startDate, endDate);
@@ -106,7 +104,7 @@ public class BookingDomainServiceImpl implements BookingDomainService {
     }
 
 
-    protected double calculateTotalAmount(Room room, LocalDate startDate, LocalDate endDate, List<BookingOption> bookingOptions) {
+    double calculateTotalAmount(Room room, LocalDate startDate, LocalDate endDate, List<BookingOption> bookingOptions) {
         long days = ChronoUnit.DAYS.between(startDate, endDate);
         double total = room.getPricePerNight() * days;
 
@@ -119,12 +117,11 @@ public class BookingDomainServiceImpl implements BookingDomainService {
     }
 
     @Override
-    @Transactional
     public BookingDto cancelBooking(Integer bookingId) {
-        Booking booking = bookingRepository.findById(bookingId).orElseThrow(() -> new EntityNotFoundException("Booking not found"));
+        Booking booking = bookingRepository.findById(bookingId).orElseThrow(() -> new BookingNotFoundException());
 
         switch (booking.getStatus()) {
-            case CANCELLED -> throw new ValidationFailedException("Booking is already cancelled");
+            case CANCELLED -> throw new ValidationException("Booking is already cancelled");
             case CREATED -> {
                 Payment oldPayment = paymentRepository.findByBookingAndStatus(booking, PaymentStatus.CREATED);
                 oldPayment.setStatus(PaymentStatus.CANCELLED);
@@ -137,7 +134,7 @@ public class BookingDomainServiceImpl implements BookingDomainService {
                 double penaltyAmount = 0;
                 if (!isWithinTimeFrame) {
                     long days = ChronoUnit.DAYS.between(LocalDate.now(), booking.getEndDate());
-                    if (days <= 0) throw new ValidationFailedException("Booking cannot be refunded as the booking period has ended");
+                    if (days <= 0) throw new ValidationException("Booking cannot be refunded as the booking period has ended");
 
                     penaltyAmount = booking.getRoom().getPricePerNight() * (days + PENALTY_DAYS);
                 }
@@ -147,7 +144,7 @@ public class BookingDomainServiceImpl implements BookingDomainService {
                 paymentRepository.save(payment);
 
             }
-            default -> throw new ValidationFailedException("Booking is invalid");
+            default -> throw new ValidationException("Booking is invalid");
         }
 
         booking.setStatus(BookingStatus.CANCELLED);
@@ -158,16 +155,15 @@ public class BookingDomainServiceImpl implements BookingDomainService {
     }
 
     @Override
-    @Transactional
     public void payPayment(PaymentDto paymentDto) {
-        Payment payment = paymentRepository.findById(paymentDto.getId()).orElseThrow(() -> new EntityNotFoundException("Payment not found"));
+        Payment payment = paymentRepository.findById(paymentDto.getId()).orElseThrow(() -> new PaymentNotFoundException());
         Booking booking = payment.getBooking();
 
         if (!(booking.getStatus().equals(BookingStatus.CREATED))) {
-            throw new ValidationFailedException("Booking is cancelled or already paid");
+            throw new ValidationException("Booking is cancelled or already paid");
         }
         if (ChronoUnit.MINUTES.between(booking.getCreatedAt(), LocalDateTime.now()) >= BOOKING_TIMEOUT_MINUTES) {
-            throw new ValidationFailedException("Payment is required within " + BOOKING_TIMEOUT_MINUTES + " minutes of booking creation");
+            throw new ValidationException("Payment is required within " + BOOKING_TIMEOUT_MINUTES + " minutes of booking creation");
         }
 
         payment.setBankName(paymentDto.getBankName());
